tests/toy/neg/000935_mutation.toylang
program a = { if a 0 then sleep; } .
